Perkin-UAT/force-app/main/default/objects/Service_Account_Inventory__c/Service_Account_Inventory__c.object-meta.xml
<CustomObject>
    <description>Purpose: To inventory and report on all service accounts used within Salesforce and their purpose.</description>
    <label>Service Account Inventory</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Service Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>