Perkin-UAT/force-app/main/default/objects/Service_Account_Inventory__c/fields/Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>