Perkin-UAT/force-app/main/default/objects/Service_Account_Inventory__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Email address associated with service account</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>