Perkin-UAT/force-app/main/default/objects/Service_Account_Inventory__c/fields/Profile_Set__c.field-meta.xml
<CustomField>
    <fullName>Profile_Set__c</fullName>
    <label>Profile Set</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PKI Service Account</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>System Admin Read-Only</fullName>
            </value>
            <value>
                <fullName>PROFILE: Integration</fullName>
            </value>
            <value>
                <fullName>SVMX - Integration Data Extract Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>