Perkin-UAT/force-app/main/default/objects/Service_Account_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Account_Name__c</columns>
    <columns>Purpose__c</columns>
    <columns>Business_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>